protox/src/parse/snapshots/protox__parse__tests__parse_option-11.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Option {
        body: OptionBody {
            name: [
                Ident(
                    Ident {
                        value: "foo",
                        span: 7..10,
                    },
                ),
            ],
            value: Aggregate(
                Message {
                    fields: [],
                },
                13..15,
            ),
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..16,
    },
)
